@@ -1,24 +1,20 @@
-
-
 import org.junit.Test;
-import org.junit.jupiter.api.TestInstance;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.stereotype.Component;
 import org.springframework.test.context.junit4.SpringRunner;
 import ru.tinkoff.edu.dto.LinkData;
 import ru.tinkoff.edu.dto.LinkDataGithub;
 import ru.tinkoff.edu.dto.LinkDataStackOverflow;
 import ru.tinkoff.edu.enums.Site;
 import ru.tinkoff.edu.service.LinkParseService;
-import ru.tinkoff.edu.service.parser.LinkParser;
 import ru.tinkoff.edu.service.parser.ParserConfiguration;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 @RunWith(SpringRunner.class)
 @SpringBootTest(classes = { ParserConfiguration.class, LinkParseService.class })
@@ -28,10 +24,10 @@ public class LinkParserGitHubTests {
 
     @Test
     public void parseGithubLink(){
-        URL link;
+        URI link;
         try {
-            link = new URL("https://github.com/brash-ram/tinkoff-screpper");
-        } catch (MalformedURLException e) {
+            link = new URI("https://github.com/brash-ram/tinkoff-screpper");
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
         LinkData expected = new LinkDataGithub(link, Site.GITHUB, "brash-ram", "tinkoff-screpper");
@@ -40,10 +36,10 @@ public class LinkParserGitHubTests {
 
     @Test
     public void parseValidStackOverflowLink(){
-        URL link;
+        URI link;
         try {
-            link = new URL("https://stackoverflow.com/questions/57772342/how-to-add-a-bean-in-springboottest");
-        } catch (MalformedURLException e) {
+            link = new URI("https://stackoverflow.com/questions/57772342/how-to-add-a-bean-in-springboottest");
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
         LinkData expected = new LinkDataStackOverflow(link, Site.STACK_OVERFLOW, 57772342L);
@@ -52,10 +48,10 @@ public class LinkParserGitHubTests {
 
     @Test
     public void parseInvalidGitHubLink(){
-        URL link;
+        URI link;
         try {
-            link = new URL("https://github.com/features");
-        } catch (MalformedURLException e) {
+            link = new URI("https://github.com/features");
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
         assertNull(linkParseService.parseLink(link));
@@ -63,10 +59,10 @@ public class LinkParserGitHubTests {
 
     @Test
     public void parseInvalidStackOverflowLink(){
-        URL link;
+        URI link;
         try {
-            link = new URL("https://stackoverflow.com/");
-        } catch (MalformedURLException e) {
+            link = new URI("https://stackoverflow.com/");
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
         assertNull(linkParseService.parseLink(link));
